# py

./: .gitignore  DESIGN.md  MANIFEST.in  Makefile  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/uplang/: __init__.py
tests/: test_parser.py
