[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uplang"
version = "1.0.0"
description = "UP (Unified Properties) parser for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "UP Lang Contributors"},
]
maintainers = [
    {name = "UP Lang Contributors"},
]
keywords = [
    "up",
    "uplang",
    "parser",
    "configuration",
    "data-format",
    "json",
    "yaml",
    "toml",
    "config",
    "serialization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://uplang.org"
Documentation = "https://github.com/uplang/up-py"
Repository = "https://github.com/uplang/up-py"
Issues = "https://github.com/uplang/up-py/issues"
Changelog = "https://github.com/uplang/up-py/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uplang"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

